Run nodes on virtual threads
Each node ran on its own platform thread, costing ~1 MB of stack
reservation per node. Switch to Thread.ofVirtual() — virtual threads
are scheduled by the JVM onto a small pool of carriers and cost a
handful of bytes apiece, so simulations with thousands of nodes are
now feasible without thread-pool gymnastics. The thread is also named
after the node, which makes logback's %thread placeholder identify
who logged what without any extra plumbing.

Java 25 has fixed the historical pinning issues — synchronized blocks
and Object.wait()/notify() (used by NodeProxy.receive) no longer pin
the carrier — so the existing wait/notify mailbox keeps working
unchanged. Step 5 will replace it with a Mailbox abstraction backed by
ReentrantLock + Condition for clarity, not necessity.

All four tests pass.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>