@@ -41,8 +41,7 @@ public class NetworkConnection {
      */
     public void engage ( Runnable node_main ) {
         this.node_main = node_main;
-        thread = new Thread(this::node_main_base);
-        thread.start();
+        thread = Thread.ofVirtual().name(node_name).start(this::node_main_base);
     }
 
     private void node_main_base() {
